Client dynamic data

--- a/Warehouse/products.html
+++ b/Warehouse/products.html
@@ -87,6 +87,7 @@
                   <th>Description</th>
                   <th>Freatures</th>
                   <th>Options</th>
+                  <th>Quantity</th>
                 </tr>
               </thead>
               <tbody id="table">
