--- a/clientwebsite/list.html
+++ b/clientwebsite/list.html
@@ -39,29 +39,30 @@
 
       <!-- Example row of columns -->
       <div>
-        <table style="width:100%;">
-            <tr>
+        <table style="width:100%;" id="clientlist">
+            <!--<tr>
               <td>
                 <h3>Product A</h3>
                 <p>Details</p>
               </td>
               <td align="right">
-                <p><select style="float:auto;;"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
+                <p>
+                  <select style="float:auto;;">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                  </select>
                   <button onclick="placeOrder()" class="button">Buy Now</button>
                 </p>
               </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>Product B</h3>
-                <p>Details</p>
-              </td>
-              <td align="right">
-                <p><select style="float:auto;;"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
-                  <button onclick="placeOrder()" class="button">Buy Now</button>
-                </p>
-              </td>
-            </tr>
+            </tr>-->
         </table>
       </div>
 
@@ -72,6 +73,9 @@
       </div>
 
     </div> <!-- /container -->
+    <script type="text/javascript" src="./js/customclient.js">
+
+    </script>
 
   </body>
 </html>
