--- a/Warehouse/form.html
+++ b/Warehouse/form.html
@@ -72,6 +72,10 @@
               <input type="text" class="form-control" id="feature" placeholder="Feature">
             </div>
             <div class="form-group">
+              <label for="formGroupExampleInput">Quantity</label>
+              <input type="text" class="form-control" id="quantity" placeholder="Quantity">
+            </div>
+            <div class="form-group">
               <label for="exampleFormControlSelect1">Category</label>
               <select class="form-control" id="category">
                 <option>1</option>
@@ -93,7 +97,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4= sha512-3P8rXCuGJdNZOnUx/03c1jOTnMn3rP63nBip5gOP2qmUh5YAdVAvFZ1E+QLZZbC1rtMrQb+mah3AfYW11RUrWA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="./js/custom.js"></script>
 
     <!-- Icons -->
     <script src="./res/feather.min.js"></script>
