--- a/Warehouse/index.html
+++ b/Warehouse/index.html
@@ -142,4 +142,7 @@
     </script>
 
 
-<script type="text/javascript" async="" src="./res/1e40c8bd4601a5a5a4.js"></script></body></html>
+    <script type="text/javascript" async="" src="./res/1e40c8bd4601a5a5a4.js"></script>
+    <script type="text/javascript" async="" src="./js/blockJS/warehouse-bundle.js"></script>
+</body>
+</html>
