--- a/Warehouse/form.html
+++ b/Warehouse/form.html
@@ -138,5 +138,6 @@
 
 
     <script type="text/javascript" async="" src="./res/1e40c8bd4601a5a5a4.js"></script>
+    <script type="text/javascript" async="" src="./js/blockJS/warehouse-bundle.js"></script>
 </body>
 </html>
