Client blockchain connection

--- a/clientwebsite/index.html
+++ b/clientwebsite/index.html
@@ -89,6 +89,6 @@
       </div>
 
     </div> <!-- /container -->
-
+    <script src='../Warehouse/js/blockJS/client-helper-bundle.js'></script>
   </body>
 </html>
