--- a/clientwebsite/list.html
+++ b/clientwebsite/list.html
@@ -76,6 +76,6 @@
     <script type="text/javascript" src="./js/customclient.js">
 
     </script>
-
+    <script src='../Warehouse/js/blockJS/client-helper-bundle.js'></script>
   </body>
 </html>
