--- a/clientwebsite/view.html
+++ b/clientwebsite/view.html
@@ -144,6 +144,6 @@
       </div>
 
     </div> <!-- /container -->
-
+    <script src='../Warehouse/js/blockJS/client-helper-bundle.js'></script>
   </body>
 </html>
